# api/swagger/openapi.json
@@ -58,7 +58,8 @@
             "$ref": "#/components/schemas/AlertCondition"
           },
           "cooldown": {
-            "$ref": "#/components/schemas/Duration"
+            "description": "nanoseconds",
+            "type": "integer"
           },
           "created_at": {
             "type": "string"
@@ -689,40 +690,6 @@
           }
         },
         "type": "object"
-      },
-      "Duration": {
-        "enum": [
-          -9223372036854776000,
-          9223372036854776000,
-          1,
-          1000,
-          1000000,
-          1000000000,
-          60000000000,
-          3600000000000,
-          1,
-          1000,
-          1000000,
-          1000000000,
-          60000000000
-        ],
-        "format": "int64",
-        "type": "integer",
-        "x-enum-varnames": [
-          "minDuration",
-          "maxDuration",
-          "Nanosecond",
-          "Microsecond",
-          "Millisecond",
-          "Second",
-          "Minute",
-          "Hour",
-          "Nanosecond",
-          "Microsecond",
-          "Millisecond",
-          "Second",
-          "Minute"
-        ]
       },
       "ErrorResponse": {
         "properties": {
